@@ -699,6 +699,8 @@ $pgv_lang["QUICK_ADD_FACTS_help"]		= "~#pgv_lang[QUICK_ADD_FACTS]#~<br /><br />T
 $pgv_lang["SURNAME_TRADITION_help"] = "~#pgv_lang[SURNAME_TRADITION]#~<br /><br />Kiedy dodajesz nowego członka rodziny, PhpGedView może automatycznie uzupełnić nazwiska według lokalnego zwyczaju.<br /><br /><ul><li>W tradycji <b>ojcowskiej</b> wszyscy członkowie rodziny mają nazwisko ojca.</li><li>W tradycji <b>hiszpańskiej</b> i <b>portugalskiej</b> dzieci przyjmują nazwiska obojga rodziców.</li><li>W tradycji <b>islandzkiej</b> dzieci przyjmują jako nazwisko imię ojca z przyrostkiem odpowiednim do płci dziecka.</li><li>W tradycji <b>polskiej</b> wszyscy członkowie rodziny mają nazwisko ojca. Są jednak nazwiska odmieniające się. Nazwiska z końcówkami -ski, -cki, -dzki mają mężczyźni, natomiast nazwiska z końcówkami -ska, -cka, -dzka mają kobiety.</li></ul><br />";
 $pgv_lang["ADVANCED_NAME_FACTS_help"] = "~#pgv_lang[ADVANCED_NAME_FACTS]#~<br /><br />To jest rozdzielana przecinkami lista znaczników faktów GEDCOM, które nie będą widoczne na formularzu dodawania i edycji imion/nazwisk. Jeśli korzystasz z alfabetu innego niż łaciński, jak na przykład hebrajski, grecki, arabski, czy cyrylica, możesz dodać takie znaczniki jak _HEB, ROMN, FONE, itd. aby móc przechowywać imiona i nazwiska w kilku różnych alfabetach.<br />";
 $pgv_lang["ADVANCED_PLAC_FACTS_help"] = "~#pgv_lang[ADVANCED_PLAC_FACTS]#~<br /><br />To jest rozdzielana przecinkami lista znaczników faktów GEDCOM, które będą widoczne podczas dodawania i edycji miejsc. Jeśli korzystasz z alfabetu innego niż łaciński, jak na przykład hebrajski, grecki, arabski, czy cyrylica, możesz dodać takie znaczniki jak _HEB, ROMN, FONE, itd. aby móc przechowywać imiona i nazwiska w kilku różnych alfabetach.<br />";
+$pgv_lang["USE_GEONAMES"]				= "Użyj GeoNames";
+$pgv_lang["USE_GEONAMES_help"]			= "~#pgv_lang[USE_GEONAMES]#~<br /><br />Jeśli chcesz używać serwera GeoNames do sugerowania nazw miejscowości razem z funkcją Autouzupełniania wybierz <b>Tak</b>. W przypadku polskich miejscowości serwer GeoNames nie działa na tyle dobrze by z niego komfortowo korzystać.<br />";
 $pgv_lang["AUTO_GENERATE_THUMBS"]		= "Automatycznie wygenerować miniaturki";
 $pgv_lang["AUTO_GENERATE_THUMBS_help"]	= "~#pgv_lang[AUTO_GENERATE_THUMBS]#~<br /><br />Czy system powinien automatycznie wygenerować miniaturki dla obrazów, które ich nie mają. Twoja instalacja PHP może nie obsługiwać tej funkcji.<br />";
 $pgv_lang["phpinfo_help"]				= "~#pgv_lang[phpinfo]#~<br /><br />Ta strona wyświetla szczegółowe informacje na temat serwera, na którym zainstalowany jest PhpGedView. Można tu zobaczyć wiele szczegółów konfiguracyjnych na temat oprogramowania serwera, które są istotne dla PHP oraz PhpGedView.<br />";
